<resources>
    <string name="app_name">Smart Kitchen Scale</string>
    <string name="title_meals">Meals</string>
    <string name="title_scale">Scale</string>
    <string name="title_profile">Profile</string>
    <string name="calendar_icon_description">Calendar</string>

    <!-- Labels for nutrition values -->
    <string name="calories_label">Calories</string>
    <string name="carbs_label">Carbs</string>
    <string name="protein_label">Protein</string>
    <string name="fat_label">Fat</string>

    <!-- Labels for add meal -->
    <string name="add_meal">Add meal</string>
    <string name="date_time">Date and time</string>

    <!-- Universal strings -->
    <string name="save">Save</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add">Add</string>
    <string name="carbs_per_100g">Carbs per 100g</string>
    <string name="fat_per_100g">Fat per 100g</string>
    <string name="protein_per_100g">Protein per 100g</string>
    <string name="calories_per_100g">Calories per 100g</string>
    <string name="weight_g">Weight (g)</string>
    <string name="name">Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_custom_product">Add custom product</string>
    <string name="search_products">Search product</string>
    <string name="enter_weight">Enter weight</string>
    <string name="ok">OK</string>
    <string name="product_image">Product image</string>
    <string name="update_meal">Update</string>
    <string name="edit_meal">Edit meal</string>
    <string name="delete_meal">Delete</string>
    <string name="confirm_delete_title">Delete</string>
    <string name="confirm_delete_message">Are you sure?</string>
    <string name="delete">Delete</string>
</resources>