<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/inputWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_g"
            android:inputType="numberDecimal"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/inputCal100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calories_per_100g"
            android:inputType="numberDecimal"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/inputProt100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/protein_per_100g"
            android:inputType="numberDecimal"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/inputFat100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fat_per_100g"
            android:inputType="numberDecimal"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/inputCarbs100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/carbs_per_100g"
            android:inputType="numberDecimal"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>
</ScrollView>
